trunk/cslc/test/csl/bugzilla_invalid/bug.973.csl
csl_register register1 {
  register1() {
    set_type(hierarchical);//error....invalid type for register
  }
};

csl_register register1 {
  register1() {
    set_type(integer);//error
  }
};
